<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JnuAssistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">Welcome,你可以打开Sliding Menu来切换菜单</string>
     <string name="category_item_new_name">新闻</string>
    <string name="category_item_new_title">NEWS</string>
    <string name="permsg_center_name">jiangqqlmj</string>
    <string name="permsg_center_level">400 / 跟帖局科长</string>
    
    <string name="jnu_zhaop">暨大</string>
    <string name="yingjiesheng_zhaop">应届生</string>
    <string name="zhuhai">珠海</string>
    <string name="permsg_center_version">版本</string>
    <string name="permsg_center_plug">插件</string>
    
     <string name="tab_news">新闻</string>
    <string name="tab_local_news">本地</string>
    <string name="tab_ties">跟帖</string>
    <string name="tab_pics">图片</string>
    <string name="tab_ugc">话题</string>
    <string name="tab_vote">投票</string>
    <string name="tab_mirco">微生活</string>
    	<string name="get_more">More</string>
   
    <string name="pull_to_refresh">下拉可以刷新</string>
	<string name="release_to_refresh">释放立即刷新</string>
	<string name="refreshing">正在刷新…</string>
	<string name="not_updated_yet">暂未更新过</string>
	<string name="updated_at">上次更新于%1$s前</string>
	<string name="updated_just_now">刚刚更新</string>
	<string name="time_error">时间有问题</string>
	
	
	

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="weibosdk_attention">注意</string>
    <string name="weibosdk_delete_all">是否要删除这条微博？</string>
    <string name="weibosdk_ok">是</string>
    <string name="weibosdk_cancel">否</string>
    <string name="weibosdk_app_name">com_weibo_android</string>
    <string name="weibosdk_send">发送</string>
     <string name="weibosdk_photo">拍照</string>
    <string name="weibosdk_close">关闭</string>
    <string name="weibosdk_share_dialog_title">新浪微博</string>
    <string name="weibosdk_please_login">请登录！</string>
    <string name="weibosdk_send_sucess">分享成功！</string>
    <string name="weibosdk_send_failed">分享失败！</string>
    <string name="weibosdk_del_pic">是否删除图片？</string>
    
     <string name="weibosdk_comment">评论</string>
      <string name="weibosdk_forward">转发</string>
       <string name="weibosdk_fav">收藏</string>
       <string name="testcontent"></string>

</resources>