<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
   
    android:id="@+id/right_per_msg_center_id" >
   
    <!-- 顶部个人基本信息 -->
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="70dip">
        <ImageView 
            android:id="@+id/right_permsg_center_img_usericon"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:src="@drawable/night_biz_pc_account_avatar_bg"
            android:scaleType="fitXY"/>
        <TextView 
            android:id="@+id/right_permsg_center_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permsg_center_name"
            android:layout_toRightOf="@id/right_permsg_center_img_usericon"
            android:layout_marginLeft="10dip"
            android:textColor="@color/whilte"
            android:textSize="15sp"
            android:layout_marginTop="13dip"/>
        <ImageView 
            android:id="@+id/right_permsg_center_img_icon"
            android:layout_width="15dip"
            android:layout_height="15dip"
            android:scaleType="fitXY"
            android:layout_toRightOf="@id/right_permsg_center_img_usericon"
            android:layout_below="@id/right_permsg_center_tv_name"
            android:src="@drawable/biz_pc_main_money_icon"
            android:layout_alignLeft="@id/right_permsg_center_tv_name"/>
        <TextView 
            android:id="@+id/right_permsg_center_tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/right_permsg_center_tv_name"
            android:layout_toRightOf="@id/right_permsg_center_img_icon"
            android:text="@string/permsg_center_level"
            android:textColor="@color/whilte"
            android:layout_marginLeft="5dip"
            android:textSize="10sp"
            android:layout_alignBaseline="@id/right_permsg_center_img_icon"
            android:layout_marginTop="2dip"/>
        <ImageButton 
            android:id="@+id/right_permsg_center_imgbtn_select"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dip"
            android:background="@drawable/app_recommend_arrow"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <!-- 中间三个button  我的跟帖，我的收藏，消息推送 -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/jnuzp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/left_btu_style"
           
            android:text="@string/jnu_zhaop"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/yingjiesheng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yingjiesheng_zhaop"
           
            android:background="@drawable/left_btu_style"
            android:textColor="@color/black"
            android:layout_weight="1"
            />
        <Button
           
            android:id="@+id/zhuhai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhuhai"
           
           android:background="@drawable/left_btu_style"
            android:textColor="@color/black"
            android:layout_weight="1"
            />      
    </LinearLayout>
    
    
     <RelativeLayout  
        android:layout_width="fill_parent"  
        android:layout_height="fill_parent" >  
    
   <ScrollView android:id="@+id/middleView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="50px">
       
        
       
       <TextView android:id="@+id/zp_middle_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           />
       
   </ScrollView>
  
 
      <!-- 底部三个button -->
  <RelativeLayout  
        android:layout_width="fill_parent"  
        android:layout_height="fill_parent" >  
      
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

       
        
        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_weight="1"
            android:background="@drawable/left_btu_style"   
            android:text="设置"         
            android:textColor="@color/black" />
      
        
        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"      
            android:text="分享"     
            android:background="@drawable/left_btu_style"
            android:textColor="@color/black"         
            />
     
    </LinearLayout>
    </RelativeLayout>
    
   <RelativeLayout
        android:id="@+id/layout_menu"
        android:layout_width="250dip"
        android:layout_height="250dip"
        android:layout_centerInParent="true"
        android:background="@drawable/menu_bg2"
        android:visibility="invisible" >

        <Button
            android:id="@+id/btn_sina"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:background="@drawable/selector_for_sina"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dip" />
         <Button
            android:id="@+id/btn_renren"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:background="@drawable/selector_for_renren"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dip" />
         
         
         <Button
            android:id="@+id/btn_qq"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:background="@drawable/selector_for_qq"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip" />
         
         <Button
            android:id="@+id/btn_qqzone"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:background="@drawable/selector_for_qqzone"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dip" />
         
         <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="分享"
        android:textColor="#aaffffff" 
        android:layout_centerInParent="true"
        android:textSize="24dip"/>
    </RelativeLayout>
    
     
</RelativeLayout>
</LinearLayout>